2002-04-09	<mschimek@users.sf.net>

	* main.c: Virtual frame rate was limited to capture rate
	  instead of coded rate.

2002-03-22	automake 1.6 <mschimek@users.sf.net>

	* configure.in: Prepared for automake 1.6.
	* Automake.am: Removed global_data.c from libmp1e_la_SOURCES,
	  1.6 doesn't like it and it's no longer needed anyway.
	* b_mp1e.c: Added mux thread, seems to work.
	  More tests required.

2002-03-16	<mschimek@users.sf.net>

	* b_mp1e.c: Added mux i/o, untested.

2002-03-14	<mschimek@users.sf.net>

	* systems/vcd.c: VCDImager requires n * sector size file.
	* main.c: Added warnings about audio bit rate and vcd
	  parameter limits.

2002-03-11	<mschimek@users.sf.net>

	* options.c: Fixed typo in -o error check. -a, -m,
	  -X etc accepted out of bounds values.
	* audio/mp2.c: fixed option_get(num_frames) bug,
	  num_frames = INT_MAX ~ oo.
	* video/mpeg1.c: num_frames = INT_MAX ~ oo.

2002-02-18	<mschimek@users.sf.net>

	* mblock.c: Fixed video_look_ahead().

2002-02-08	<mschimek@users.sf.net>

	* Added -o patch by Xye
	* Added SIGUSR1 patch by Jon Hittner

2002-02-05	<mschimek@users.sf.net>

	* New option -n h:m:s record time.
	* Rewrote VCD mux.
	* b_mp1e.c: Changes towards rte 0.5.

2002-01-23	Fixes <mschimek@users.sf.net>

	* systems/systems.c: Fixed stupid bug in stream_sink().

2002-01-18	Fixes <mschimek@users.sf.net>

	* Improved timestamping in audio&video interfaces.
	* audio/mp2.c: Fixed audio frame dropping bug.
	* audio/arts.c: Added, ported from Zapping. (Just for
	  completeness, stinks no less than the ESD interface.)

2002-01-13	Fixes <mschimek@users.sf.net>

	* test/preview.c: Restored.
	* video/mpeg1.c: Fixed bug in frame skipping code. 

2001-12-11	<mschimek@users.sf.net>

	* video/mpeg1.c: executed MC preparation despite the picture not being
	  referenced. (However in normal IPB streams this occurs just once.)
	* b_mp1e.c: Fixed coded frame rate setup.

2001-12-05	<mschimek@users.sf.net>
