@@ -22,7 +22,7 @@
  *  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-/* $Id: v4l.c,v 1.19 2002-03-10 07:22:15 mschimek Exp $ */
+/* $Id: v4l.c,v 1.20 2002-04-12 03:12:50 mschimek Exp $ */
 
 #include <ctype.h>
 #include <assert.h>
@@ -71,7 +71,7 @@ timestamp2(buffer *b)
 
 		if (dt_acc > tfmem.ref * 1.5) {
 			/* bah. */
-#if 1
+#if 0
 			printv(0, "v4l dropped %f > %f * 1.5\n",
 			       dt_acc, tfmem.ref);
 #endif
@@ -81,7 +81,7 @@ timestamp2(buffer *b)
 			cap_time += mp1e_timestamp_filter
 				(&tfmem, dt, 0.001, 1e-7, 0.1);
 		}
-#if 1
+#if 0
 		printv(0, "now %f dt %+f dta %+f err %+f t/b %+f\n",
 		       now, dt, dt_acc, tfmem.err, tfmem.ref);
 #endif
